transfering of content (wip)

--- a/findings.qmd
+++ b/findings.qmd
@@ -1,3 +1,121 @@
 ---
-title: "Publications and Presentations"
+title: "Academic Publications and Presentations"
 ---
+
+### 2010
+
+Dancy, Geoff, Hunjoon Kim, and Eric Wiebelhaus-Brahm. 2010. ["The Turn to Truth: Trends in Truth Commission Experimentation."](http://www.tandfonline.com/doi/pdf/10.1080/14754830903530326) Journal of Human Rights 9.1: 45-64.
+
+Olsen, Tricia D., Leigh A. Payne, and Andrew G. Reiter. 2010. "The Justice Balance: When Transitional Justice Improves Human Rights and Democracy." Human Rights Quarterly 32.4: 980-1007.
+
+### 2011
+
+Olsen, Tricia D., Leigh A. Payne, and Andrew G. Reiter. 2011. "As Implicações Políticas dos Processos de Anistia." in *A Anistia na Era da Responsabilização: O Brasil em Perspectiva Internacional e Comparada*, eds. Leigh A. Payne, Paulo Abro, and Marcelo D. Torelly. Brasília: Ministério da Justiça da República federativa do Brasil. 542-571.
+
+Payne, Leigh, Paulo Abro, and Marcelo D. Torelly, eds. 2011. *A Anistia na Era da Responsabilização: O Brasil em Perspectiva Internacional e Comparada*. Brasilia: Ministério da Justiça da República Federativa do Brasil.
+
+Sikkink, Kathryn. 2011. "A Era da Responsabilização: a ascensão da responsabilização penal individual." in *A Anistia na Era da Responsabilização: O Brasil em Perspectiva Internacional e Comparada*, eds. Leigh A. Payne, Paulo Abro, and Marcelo D. Torelly. Brasília: Ministério da Justiça da República federativa do Brasil. 34-75.
+
+### 2012
+
+Braid, Emily and Naomi Roht-Arriaza. 2012. "De Facto and De Jure Amnesty Laws: The Central American Case." In *Amnesty in the Age of Human Rights Accountability: Comparative and International Perspectives*, eds. Francesca Lessa and Leigh A. Payne. New York: Cambridge University Press. 182-209
+
+Dancy, Geoff, and Kathryn Sikkink. 2012. ["Ratification and Human Rights Prosecutions: Toward a Transnational Theory of Treaty Compliance."](http://nyujilp.org/wp-content/uploads/2010/06/44-3_Dancy_Sikkink_Web.pdf) *New York University Journal of International Law and Politics* 44.3: 751-790.
+
+Engstrom, Par and Gabriel Pereira. 2012. "From Amnesty to Accountability: The Ebb and Flow in the Search for Justice in Argentina." In *Amnesty in the Age of Human Rights Accountability: Comparative and International Perspectives*, eds. Francesca Lessa and Leigh A. Payne. New York: Cambridge University Press. 97-122
+
+Kim, Hun Joon. 2012. ["Structural Determinants of Human Rights Prosecutions after Democratic Transition."](http://jpr.sagepub.com/content/49/2/305.abstract) Journal of Peace Research 49.2: 305-320.
+
+Kim, Hun Joon and Kathryn Sikkink. 2012-2013. "How Do Human Rights Prosecutions Improve Human Rights after Transition?" Interdisciplinary Journal of Human Rights Law 7.1: 69-90
+
+Lessa, Francesca. 2012. "Barriers to Justice: The Ley de Caducidad and Impunity in Uruguay." in *Amnesty in the Age of Human Rights Accountability: Comparative and International Perspectives*, eds. Francesca Lessa and Leigh A. Payne. New York: Cambridge University Press. 123-151
+
+Lessa, Francesca, and Leigh A. Payne, eds. 2012. [Amnesty in the Age of Human Rights Accountability: Comparative and International Perspectives.](http://www.cambridge.org/us/academic/subjects/law/human-rights/amnesty-age-human-rights-accountability-comparative-and-international-perspectives?format=PB) New York: Cambridge University Press.
+
+Olsen, Tricia D., Leigh A. Payne, and Andrew G. Reiter. 2012. "Conclusion: Amnesty in the Age of Accountability" in *Amnesty in the Age of Human Rights Accountability: Comparative and International Perspectives*, eds. Francesca Lessa and Leigh A. Payne. New York: Cambridge University Press. 336-358
+
+Olsen, Tricia D., Leigh A. Payne, and Andrew G. Reiter. 2012. "Amnesty in the Age of Accountability: Brazil in Comparative Context." In *Real Social Science: Applied Phronesis*, eds. Bent Flyvbjerg, Todd Landman, Sanford Schram. New York: Cambridge University Press. 204-227.
+
+Olsen, Tricia D., Leigh A. Payne, and Andrew G. Reiter. 2012 "Transitional Justice and Civil War: Exploring New Pathways, Challenging Old Guideposts." *Transitional Justice Review* 1.1:137-169.
+
+Sikkink, Kathryn. 2012. "The Age of Accountability: The Global Rise of Individual Criminal Accountability." in *Amnesty in the Age of Human Rights Accountability: Comparative and International Perspectives*, eds. Francesca Lessa and Leigh A. Payne. New York: Cambridge University Press. 19-41.
+
+### 2013
+
+Dancy, Geoff. 2013. ["The Impact of Human Rights Law in Time."](http://conservancy.umn.edu/handle/157798) Ph.D. Dissertation. University of Minnesota.
+
+Lynch, Moira. 2013. "Purges." in *Encyclopedia of Transitional Justice Volume 1*, eds. Lavinia Stan and Nadya Nedelsky, New York: Cambridge University Press.
+
+Michel, Verónica, and Kathryn Sikkink. 2013. "Human Rights Prosecutions and the Participation Rights of Victims in Latin America." *Law & Society Review* 47.4: 873-907.
+
+Sikkink, Kathryn and Hun Joon Kim (2013). "The Justice Cascade: The Origins and Effectiveness of Prosecutions of Human Rights Violations." *Annual Review of Law and Social Science* 9: 269-285.
+
+### 2014
+
+Jeffery, Reneé and Hun Joon Kim, eds. 2014. [*Transitional Justice in the Asia Pacific*.](http://www.amazon.it/Transitional-Justice-Asia-Pacific-Renee-Jeffery-ebook/dp/B00GA22TOC) New York: Cambridge University Press.
+
+Lessa, Francesca, Tricia Olsen, Leigh Payne, Gabriel Pereira and Andrew Reiter. 2014. "Persistent or Eroding Impunity? The Divergent Effects of Legal Challenges to Amnesty Laws for Past Human Rights Violations." *Israel Law Review* 47.1.
+
+Lessa, Francesca, Tricia Olsen, Leigh Payne, Gabriel Pereira and Andrew Reiter. "Overcoming Impunity: Pathways to Accountability in Latin America." *International Journal of Transitional Justice* 8(1): 75-98*. *
+
+Payne, Leigh A. and Kathryn Sikkink. 2014. "Transitional Justice in the Asia Pacific: Comparative and Theoretical Perspectives." in *Transitional Justice in the Asia-Pacific*, Eds. Reneé Jeffery and Hun Joon Kim. New York: Cambridge University Press. 33-60.
+
+### 2015
+
+Dancy, Geoff and Eric Wiebelhaus-Brahm. 2015. "Timing, Sequencing, and Transitional Justice Impact: A Qualitative Comparative Analysis of Latin America." *Human Rights Review* 16(4): 321-42.
+
+Dancy, Geoff, and Eric Wiebelhaus-Brahm. 2015. "Bridge to Human Development or Vehicle of Inequality? Transitional Justice and Economic Structures. *International Journal of Transitional Justice* 9(1): 51-69.
+
+Lessa, Francesa, Leigh A. Payne, and Gabriel Pereira. 2015. "Overcoming Barriers to Justice in the Age of Human Rights Accountability. *Human Rights Quarterly* 37: 728-754.
+
+Lynch, Moira. 2015. "A Theory of Human Rights Accountability and Emergency Law: Bringing in Historical Institutionalism." *The Journal of Human Rights* 14(4): 504-524.
+
+Lynch, Moira and Bridget Marchesi. 2015. "The Adoption and Impact of Transitional Justice," in *Post-Communist Transitional Justice: Lessons from 25 Years of Experience*, eds. Lavinia Stan and Nadva Nedelesky. New York: Cambridge University Press.
+
+### 2016
+
+Dancy, Geoff. 2016. "Human Rights Pragmatism: Belief, Inquiry, and Action." *European Journal of International Relations* 22(3): 512-535.
+
+Dancy, Geoff, and Verónica Michel. 2016. "Human Rights Enforcement From Below: Private Actors and Prosecutorial Momentum in Latin America and Europe." *International Studies Quarterly* 60(1): 173-188.
+
+### 2017
+
+Berlin, Mark and Geoff Dancy. 2017. "The Difference Law Makes: Domestic Criminal Laws Against Atrocity and Transitional Human Rights Prosecutions." [51(3): 533-566.]
+
+Dancy, Geoff, and Christopher J. Fariss. 2017. "Rescuing Human Rights Law from Legalism and Its Critics." *Human Rights Quarterly* 39(1): 1-36 (2017).
+
+Dancy, Geoff and Florencia Montal. 2017. ["Unintended Positive Complementarity: How ICC Investigations Increase Domestic Human Rights Prosecutions."](http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2736519) *American Journal of International Law* 111(3): 689-723 (2017).
+
+Dancy, Geoff and Florencia Montal. 2017. "From Law *versus* Politics to Law *in* Politics: A Pragmatist Assessment of the ICC's Impact *American University International Law Review* 32(3): 645-706 (2017).
+
+Dancy, Geoff, and Kathryn Sikkink. 2017. "Human Rights Data, Processes, and Outcomes: How Recent Research Points to a Better Future. Forthcoming in *Human Rights Futures*, eds. Stephen Hopgood, Jack Snyder, and Leslie Vinjamuri. New York: Columbia University Press.
+
+Fariss, Christopher J. and Geoff Dancy. 2018. "The Good, the Bad, and the Data: Human Rigths Law and the Indicators of Repression." *Annual Review of Law and Social Science* 13:273--94 (2017).
+
+Sikkink, Kathryn. 2017. *Evidence for Hope: Making Human Rights Work in the 21st Century*. Princeton, NJ: Princeton University Press.
+
+Dancy, Geoff. 2017. "Searching for Deterrence at the International Criminal Court." *International Criminal Law Review* 17(4): 625-655.
+
+### 2018
+
+Dancy, Geoff. 2018. "Deals with the Devil? Conflict Amnesties, Civil War, and Sustainable Peace.'' *International Organization* 72(2): 387-421.
+
+Dancy, Geoff and Christopher J. Fariss. 2018 "The Heavens Are Always Fallen: A Neo-Constitutive Approach to International Human Rights Law." *Law & Contemporary Problems* 81(4): 73-100.
+
+Dancy, Geoff and Eric Wiebelhaus-Brahm. 2018. "The Impact of Criminal Prosecutions During Civil War. *Journal of Peace Research* 55(1): 47-61.
+
+### 2019
+
+Dancy, Geoff, Bridget Marchesi, Tricia Olsen, Leigh A. Payne, Andrew Reiter, and Kathryn Sikkink. 2019. Behind Bars and Bargains: New Findings from Emerging Democracies."*International Studies Quarterly* 63(1): 99-110.
+
+Geoff and Eric Wiebelhaus-Brahm. 2019. "Data on Accountability in Post-Conflict Societies: Implications for Sri Lanka" in *Sri Lanka's Time to Try: Prosecuting Conflict-Related Abuses*, ed. Isabelle Lasee. Colombo: South Asian Center for Legal Studies.
+
+Dancy, Geoff. 2019. "Achieving an Unpopular Balance: Colombian Post-Conflict Justice and Amnesty in Comparative Perspective" in *Challenges for Peace and Transitional Justice in Colombia*, eds. Jacqueline DeMerrit and James Meernik. New York: Cambridge University Press.
+
+### 2020
+
+### 2021
+
+Dancy, Geoff and Oskar Timo Thoms. 2021. "Do Truth Commissions Improve Democracy?" Forthcoming in *Comparative Political Studies.*
+
+Dancy, Geoff and Kathryn Sikkink. 2021. "The Data of Transitional Justice." Forthcoming in *The Oxford Handbook of Transitional Justice*, eds. Jens Meierhenrich, Alexander Laban Hinton, and Lawrence Douglas. Oxford University Press.
