--- a/links.qmd
+++ b/links.qmd
@@ -1,3 +1,20 @@
 ---
 title: "Links"
 ---
+
+[US Department of State Human Rights Reports](http://www.state.gov/j/drl/rls/hrrpt/)
+
+[Keesing's Record of World Events](http://recordofworldevents.com/)
+
+[University of Minnesota Human Rights Library](http://www1.umn.edu/humanrts/)
+
+[The Polity IV Project: Political Regime Characteristics and Transitions, 1800-2012](http://www.systemicpeace.org/polity/polity4.htm)
+
+[US Institute of Peace Transitional Justice Page](http://www.usip.org/publications/transitional-justice-2)
+
+[The Transitional Justice Institute, University of Ulster](http://transitionaljustice.ulster.ac.uk/)
+		
+[The International Center for Transitional Justice](http://ictj.org/)
+
+[The Trial Watch Project, Geneva](http://www.trial-ch.org/en/activities/informing-the-public/trial-watch.html)
+		
