--- a/findings.qmd
+++ b/findings.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Academic Publications and Presentations"
+editor: source
 ---
 
 ### 2010
@@ -121,4 +122,3 @@ Dancy, Geoff and Oskar Timo Thoms. 2021. "Do Truth Commissions Improve Democracy
 Dancy, Geoff and Kathryn Sikkink. 2021. "The Data of Transitional Justice." Forthcoming in *The Oxford Handbook of Transitional Justice*, eds. Jens Meierhenrich, Alexander Laban Hinton, and Lawrence Douglas. Oxford University Press.
 
 {{< include _footer.qmd >}}
-
